imp: updated LICENCE

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "couchtap",
-  "version": "0.1.12",
+  "version": "0.1.14",
   "description": "Couchbase TAP Protocol for node.js",
+  "main": "index.js",
   "homepage": "https://github.com/godric7/couchtap",
   "repository": {
     "type": "git",
     "url": "https://github.com/godric7/couchtap"
   },
   "keywords": ["couchbase", "tap"],
-  "main": "./index.js",
+  "author": "Godric <godric.com@gmail.com>",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Godric ",
   "license": "MIT",
   "dependencies": {
     "saslmechanisms": "^0.1.1",
